--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "Custom JSON Server with _id support",
   "scripts": {
-    "start": "json-server --watch db.json --port 3001 --id _id"
+    "start": "json-server --watch db.json --port 3001 --id _id --static ./public"
   },
   "dependencies": {
     "json-server": "^0.17.4"
